// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Flowchart Shape Presets flowChartAlternateProcess should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 16.666666666666668,
  },
  {
    "type": "C",
    "x": 16.666666666666664,
    "x1": 0,
    "x2": 7.461920836153441,
    "y": -3.552713678800501e-15,
    "y1": 7.461920836153443,
    "y2": 0,
  },
  {
    "type": "L",
    "x": 83.33333333333333,
    "y": 0,
  },
  {
    "type": "C",
    "x": 95.11844635310912,
    "x1": 87.7536081639924,
    "x2": 91.99284004564187,
    "y": 4.881553646890872,
    "y1": 0,
    "y2": 1.7559473394236278,
  },
  {
    "type": "C",
    "x": 100,
    "x1": 98.24405266057636,
    "x2": 100,
    "y": 16.666666666666664,
    "y1": 8.007159954358116,
    "y2": 12.246391836007597,
  },
  {
    "type": "L",
    "x": 100,
    "y": 83.33333333333333,
  },
  {
    "type": "C",
    "x": 83.33333333333333,
    "x1": 100,
    "x2": 92.53807916384656,
    "y": 100,
    "y1": 92.53807916384655,
    "y2": 100,
  },
  {
    "type": "L",
    "x": 16.666666666666668,
    "y": 100,
  },
  {
    "type": "C",
    "x": 0,
    "x1": 7.461920836153446,
    "x2": 3.552713678800501e-15,
    "y": 83.33333333333333,
    "y1": 100,
    "y2": 92.53807916384656,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartCollate should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 50,
    "y": 50,
  },
  {
    "type": "L",
    "x": 100,
    "y": 100,
  },
  {
    "type": "L",
    "x": 0,
    "y": 100,
  },
  {
    "type": "L",
    "x": 50,
    "y": 50,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartConnector should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "C",
    "x": 49.99999999999999,
    "x1": 0,
    "x2": 22.38576250846032,
    "y": -7.105427357601002e-15,
    "y1": 22.38576250846033,
    "y2": 0,
  },
  {
    "type": "C",
    "x": 85.35533905932738,
    "x1": 63.260824491977196,
    "x2": 75.97852013692564,
    "y": 14.644660940672608,
    "y1": -7.105427357601002e-15,
    "y2": 5.267842018270876,
  },
  {
    "type": "C",
    "x": 100.00000000000001,
    "x1": 94.7321579817291,
    "x2": 100,
    "y": 49.99999999999998,
    "y1": 24.02147986307434,
    "y2": 36.73917550802278,
  },
  {
    "type": "C",
    "x": 50.000000000000014,
    "x1": 100.00000000000001,
    "x2": 77.61423749153968,
    "y": 99.99999999999997,
    "y1": 77.61423749153965,
    "y2": 99.99999999999997,
  },
  {
    "type": "C",
    "x": 1.4210854715202004e-14,
    "x1": 22.385762508460353,
    "x2": 2.1316282072803006e-14,
    "y": 49.99999999999998,
    "y1": 99.99999999999997,
    "y2": 77.61423749153964,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartDecision should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 50,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartDelay should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 0,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "C",
    "x": 100.00000000000003,
    "x1": 77.61423749153967,
    "x2": 100,
    "y": 49.99999999999998,
    "y1": -1.4210854715202004e-14,
    "y2": 22.38576250846031,
  },
  {
    "type": "C",
    "x": 50.00000000000005,
    "x1": 100.00000000000003,
    "x2": 77.61423749153971,
    "y": 100,
    "y1": 77.61423749153964,
    "y2": 99.99999999999999,
  },
  {
    "type": "L",
    "x": 0,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartDisplay should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "L",
    "x": 16.666666666666668,
    "y": 0,
  },
  {
    "type": "L",
    "x": 83.33333333333334,
    "y": 0,
  },
  {
    "type": "C",
    "x": 100.00000000000003,
    "x1": 92.53807916384658,
    "x2": 100.00000000000001,
    "y": 49.999999999999964,
    "y1": -2.1316282072803006e-14,
    "y2": 22.3857625084603,
  },
  {
    "type": "C",
    "x": 83.33333333333337,
    "x1": 100.00000000000003,
    "x2": 92.53807916384659,
    "y": 100,
    "y1": 77.61423749153963,
    "y2": 99.99999999999997,
  },
  {
    "type": "L",
    "x": 16.666666666666668,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartDocument should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 80.19444444444444,
  },
  {
    "type": "C",
    "x": 0,
    "x1": 50,
    "x2": 50,
    "y": 93.38888888888889,
    "y1": 80.19444444444444,
    "y2": 110.75,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartExtract should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 100,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartInputOutput should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 100,
  },
  {
    "type": "L",
    "x": 20,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 80,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartInternalStorage should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 12.5,
    "y": 0,
  },
  {
    "type": "L",
    "x": 12.5,
    "y": 100,
  },
  {
    "type": "M",
    "x": 0,
    "y": 12.5,
  },
  {
    "type": "L",
    "x": 100,
    "y": 12.5,
  },
  {
    "type": "M",
    "x": 0,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 100,
  },
  {
    "type": "L",
    "x": 0,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartMagneticDisk should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 100,
    "y": 16.666666666666668,
  },
  {
    "type": "C",
    "x": 50.000000000000014,
    "x1": 100,
    "x2": 77.61423749153968,
    "y": 33.333333333333336,
    "y1": 25.87141249717989,
    "y2": 33.33333333333333,
  },
  {
    "type": "C",
    "x": 0,
    "x1": 22.385762508460356,
    "x2": 1.4210854715202004e-14,
    "y": 16.66666666666668,
    "y1": 33.33333333333334,
    "y2": 25.871412497179897,
  },
  {
    "type": "M",
    "x": 0,
    "y": 16.666666666666668,
  },
  {
    "type": "C",
    "x": 49.99999999999994,
    "x1": -1.4210854715202004e-14,
    "x2": 22.38576250846028,
    "y": -1.0658141036401503e-14,
    "y1": 7.461920836153446,
    "y2": 0,
  },
  {
    "type": "C",
    "x": 100,
    "x1": 77.6142374915396,
    "x2": 99.99999999999997,
    "y": 16.66666666666664,
    "y1": -2.1316282072803006e-14,
    "y2": 7.461920836153418,
  },
  {
    "type": "L",
    "x": 100,
    "y": 83.33333333333334,
  },
  {
    "type": "C",
    "x": 50.000000000000014,
    "x1": 100,
    "x2": 77.61423749153968,
    "y": 100.00000000000001,
    "y1": 92.53807916384656,
    "y2": 100,
  },
  {
    "type": "C",
    "x": 0,
    "x1": 22.385762508460356,
    "x2": 1.4210854715202004e-14,
    "y": 83.33333333333336,
    "y1": 100.00000000000001,
    "y2": 92.53807916384658,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartMagneticDrum should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 83.33333333333334,
    "y": 100,
  },
  {
    "type": "C",
    "x": 66.66666666666667,
    "x1": 74.12858750282012,
    "x2": 66.66666666666669,
    "y": 50.00000000000003,
    "y1": 100.00000000000001,
    "y2": 77.61423749153968,
  },
  {
    "type": "C",
    "x": 83.33333333333333,
    "x1": 66.66666666666667,
    "x2": 74.1285875028201,
    "y": 0,
    "y1": 22.385762508460367,
    "y2": 2.842170943040401e-14,
  },
  {
    "type": "M",
    "x": 16.666666666666668,
    "y": 0,
  },
  {
    "type": "L",
    "x": 83.33333333333334,
    "y": 0,
  },
  {
    "type": "C",
    "x": 100.00000000000003,
    "x1": 92.53807916384658,
    "x2": 100.00000000000001,
    "y": 49.999999999999964,
    "y1": -2.1316282072803006e-14,
    "y2": 22.3857625084603,
  },
  {
    "type": "C",
    "x": 83.33333333333337,
    "x1": 100.00000000000003,
    "x2": 92.53807916384659,
    "y": 100,
    "y1": 77.61423749153963,
    "y2": 99.99999999999997,
  },
  {
    "type": "L",
    "x": 16.666666666666668,
    "y": 100,
  },
  {
    "type": "C",
    "x": -3.552713678800501e-15,
    "x1": 7.461920836153448,
    "x2": 3.552713678800501e-15,
    "y": 50.00000000000003,
    "y1": 100.00000000000001,
    "y2": 77.61423749153968,
  },
  {
    "type": "C",
    "x": 16.666666666666647,
    "x1": -7.105427357601002e-15,
    "x2": 7.461920836153425,
    "y": 0,
    "y1": 22.385762508460367,
    "y2": 2.842170943040401e-14,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartMagneticTape should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 50,
    "y": 100,
  },
  {
    "type": "C",
    "x": 0,
    "x1": 22.38576250846034,
    "x2": 7.105427357601002e-15,
    "y": 50.00000000000001,
    "y1": 100,
    "y2": 77.61423749153967,
  },
  {
    "type": "C",
    "x": 49.99999999999999,
    "x1": 0,
    "x2": 22.38576250846032,
    "y": 0,
    "y1": 22.38576250846034,
    "y2": 7.105427357601002e-15,
  },
  {
    "type": "C",
    "x": 85.35533905932738,
    "x1": 63.260824491977196,
    "x2": 75.97852013692564,
    "y": 14.644660940672615,
    "y1": 0,
    "y2": 5.267842018270883,
  },
  {
    "type": "C",
    "x": 100.00000000000001,
    "x1": 94.7321579817291,
    "x2": 100,
    "y": 49.999999999999986,
    "y1": 24.021479863074347,
    "y2": 36.73917550802278,
  },
  {
    "type": "C",
    "x": 85.3553390593274,
    "x1": 100.00000000000001,
    "x2": 94.73215798172913,
    "y": 85.35533905932735,
    "y1": 63.26082449197718,
    "y2": 75.97852013692562,
  },
  {
    "type": "L",
    "x": 100,
    "y": 85.35533905932738,
  },
  {
    "type": "L",
    "x": 100,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartManualInput should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 20,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 100,
  },
  {
    "type": "L",
    "x": 0,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartManualOperation should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 80,
    "y": 100,
  },
  {
    "type": "L",
    "x": 20,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartMerge should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartMultidocument should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 17.01388888888889,
  },
  {
    "type": "L",
    "x": 86.08796296296296,
    "y": 17.01388888888889,
  },
  {
    "type": "L",
    "x": 86.08796296296296,
    "y": 83.43518518518518,
  },
  {
    "type": "C",
    "x": 0,
    "x1": 43.04629629629629,
    "x2": 43.04629629629629,
    "y": 96.21296296296296,
    "y1": 83.43518518518518,
    "y2": 108.99074074074073,
  },
  {
    "type": "Z",
  },
  {
    "type": "M",
    "x": 7.092592592592593,
    "y": 17.01388888888889,
  },
  {
    "type": "L",
    "x": 7.092592592592593,
    "y": 8.402777777777777,
  },
  {
    "type": "L",
    "x": 92.59259259259258,
    "y": 8.402777777777777,
  },
  {
    "type": "L",
    "x": 92.59259259259258,
    "y": 75.24074074074073,
  },
  {
    "type": "C",
    "x": 86.08796296296296,
    "x1": 89.34259259259258,
    "x2": 86.08796296296296,
    "y": 75.7037037037037,
    "y1": 75.24074074074073,
    "y2": 75.7037037037037,
  },
  {
    "type": "M",
    "x": 13.759259259259258,
    "y": 8.402777777777777,
  },
  {
    "type": "L",
    "x": 13.759259259259258,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 66.62962962962962,
  },
  {
    "type": "C",
    "x": 92.59259259259258,
    "x1": 96.29629629629629,
    "x2": 92.59259259259258,
    "y": 66.97685185185185,
    "y1": 66.62962962962962,
    "y2": 66.97685185185185,
  },
]
`;

exports[`Flowchart Shape Presets flowChartOfflineStorage should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 40,
    "y": 80,
  },
  {
    "type": "L",
    "x": 60,
    "y": 80,
  },
  {
    "type": "M",
    "x": 0,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartOffpageConnector should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 80,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "L",
    "x": 0,
    "y": 80,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartOnlineStorage should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 16.666666666666668,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "C",
    "x": 83.33333333333334,
    "x1": 90.79525416948678,
    "x2": 83.33333333333334,
    "y": 50.000000000000014,
    "y1": 1.4210854715202004e-14,
    "y2": 22.385762508460356,
  },
  {
    "type": "C",
    "x": 100.00000000000001,
    "x1": 83.33333333333334,
    "x2": 90.79525416948678,
    "y": 100,
    "y1": 77.61423749153968,
    "y2": 100,
  },
  {
    "type": "L",
    "x": 16.666666666666668,
    "y": 100,
  },
  {
    "type": "C",
    "x": -3.552713678800501e-15,
    "x1": 7.461920836153448,
    "x2": 3.552713678800501e-15,
    "y": 50.00000000000003,
    "y1": 100.00000000000001,
    "y2": 77.61423749153968,
  },
  {
    "type": "C",
    "x": 16.666666666666647,
    "x1": -7.105427357601002e-15,
    "x2": 7.461920836153425,
    "y": 0,
    "y1": 22.385762508460367,
    "y2": 2.842170943040401e-14,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartOr should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "L",
    "x": 100,
    "y": 50,
  },
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "C",
    "x": 49.99999999999999,
    "x1": 0,
    "x2": 22.38576250846032,
    "y": -7.105427357601002e-15,
    "y1": 22.38576250846033,
    "y2": 0,
  },
  {
    "type": "C",
    "x": 85.35533905932738,
    "x1": 63.260824491977196,
    "x2": 75.97852013692564,
    "y": 14.644660940672608,
    "y1": -7.105427357601002e-15,
    "y2": 5.267842018270876,
  },
  {
    "type": "C",
    "x": 100.00000000000001,
    "x1": 94.7321579817291,
    "x2": 100,
    "y": 49.99999999999998,
    "y1": 24.02147986307434,
    "y2": 36.73917550802278,
  },
  {
    "type": "C",
    "x": 50.000000000000014,
    "x1": 100.00000000000001,
    "x2": 77.61423749153968,
    "y": 99.99999999999997,
    "y1": 77.61423749153965,
    "y2": 99.99999999999997,
  },
  {
    "type": "C",
    "x": 1.4210854715202004e-14,
    "x1": 22.385762508460353,
    "x2": 2.1316282072803006e-14,
    "y": 49.99999999999998,
    "y1": 99.99999999999997,
    "y2": 77.61423749153964,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartPredefinedProcess should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 12.5,
    "y": 0,
  },
  {
    "type": "L",
    "x": 12.5,
    "y": 100,
  },
  {
    "type": "M",
    "x": 87.5,
    "y": 0,
  },
  {
    "type": "L",
    "x": 87.5,
    "y": 100,
  },
  {
    "type": "M",
    "x": 0,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 100,
  },
  {
    "type": "L",
    "x": 0,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartPreparation should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "L",
    "x": 20,
    "y": 0,
  },
  {
    "type": "L",
    "x": 80,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 50,
  },
  {
    "type": "L",
    "x": 80,
    "y": 100,
  },
  {
    "type": "L",
    "x": 20,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartProcess should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 100,
  },
  {
    "type": "L",
    "x": 0,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartPunchedCard should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 20,
  },
  {
    "type": "L",
    "x": 20,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 100,
  },
  {
    "type": "L",
    "x": 0,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartPunchedTape should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 10,
  },
  {
    "type": "C",
    "x": 25,
    "x1": 3.552713678800501e-15,
    "x2": 11.19288125423017,
    "y": 20,
    "y1": 15.522847498307932,
    "y2": 20,
  },
  {
    "type": "C",
    "x": 50,
    "x1": 38.807118745769834,
    "x2": 50,
    "y": 9.999999999999998,
    "y1": 20,
    "y2": 15.522847498307932,
  },
  {
    "type": "C",
    "x": 75,
    "x1": 50,
    "x2": 61.192881254230166,
    "y": -3.552713678800501e-15,
    "y1": 4.477152501692065,
    "y2": -1.7763568394002505e-15,
  },
  {
    "type": "C",
    "x": 100,
    "x1": 88.80711874576983,
    "x2": 100,
    "y": 9.999999999999995,
    "y1": -3.552713678800501e-15,
    "y2": 4.477152501692062,
  },
  {
    "type": "L",
    "x": 100,
    "y": 90,
  },
  {
    "type": "C",
    "x": 75,
    "x1": 100,
    "x2": 88.80711874576984,
    "y": 80,
    "y1": 84.47715250169206,
    "y2": 80,
  },
  {
    "type": "C",
    "x": 50,
    "x1": 61.19288125423017,
    "x2": 50,
    "y": 90,
    "y1": 80,
    "y2": 84.47715250169206,
  },
  {
    "type": "C",
    "x": 25,
    "x1": 50,
    "x2": 38.807118745769834,
    "y": 100,
    "y1": 95.52284749830794,
    "y2": 100,
  },
  {
    "type": "C",
    "x": 0,
    "x1": 11.19288125423017,
    "x2": 3.552713678800501e-15,
    "y": 90,
    "y1": 100,
    "y2": 95.52284749830794,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartSort should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "L",
    "x": 100,
    "y": 50,
  },
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "L",
    "x": 50,
    "y": 0,
  },
  {
    "type": "L",
    "x": 100,
    "y": 50,
  },
  {
    "type": "L",
    "x": 50,
    "y": 100,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartSummingJunction should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 14.644660940672622,
    "y": 14.64466094067263,
  },
  {
    "type": "L",
    "x": 85.35533905932738,
    "y": 85.35533905932738,
  },
  {
    "type": "M",
    "x": 85.35533905932738,
    "y": 14.64466094067263,
  },
  {
    "type": "L",
    "x": 14.644660940672622,
    "y": 85.35533905932738,
  },
  {
    "type": "M",
    "x": 0,
    "y": 50,
  },
  {
    "type": "C",
    "x": 49.99999999999999,
    "x1": 0,
    "x2": 22.38576250846032,
    "y": -7.105427357601002e-15,
    "y1": 22.38576250846033,
    "y2": 0,
  },
  {
    "type": "C",
    "x": 85.35533905932738,
    "x1": 63.260824491977196,
    "x2": 75.97852013692564,
    "y": 14.644660940672608,
    "y1": -7.105427357601002e-15,
    "y2": 5.267842018270876,
  },
  {
    "type": "C",
    "x": 100.00000000000001,
    "x1": 94.7321579817291,
    "x2": 100,
    "y": 49.99999999999998,
    "y1": 24.02147986307434,
    "y2": 36.73917550802278,
  },
  {
    "type": "C",
    "x": 50.000000000000014,
    "x1": 100.00000000000001,
    "x2": 77.61423749153968,
    "y": 99.99999999999997,
    "y1": 77.61423749153965,
    "y2": 99.99999999999997,
  },
  {
    "type": "C",
    "x": 1.4210854715202004e-14,
    "x1": 22.385762508460353,
    "x2": 2.1316282072803006e-14,
    "y": 49.99999999999998,
    "y1": 99.99999999999997,
    "y2": 77.61423749153964,
  },
  {
    "type": "Z",
  },
]
`;

exports[`Flowchart Shape Presets flowChartTerminator should generate snapshot-stable path at 100x100 1`] = `
[
  {
    "type": "M",
    "x": 16.087962962962962,
    "y": 0,
  },
  {
    "type": "L",
    "x": 83.91203703703704,
    "y": 0,
  },
  {
    "type": "C",
    "x": 100.00000000000001,
    "x1": 92.79717363732411,
    "x2": 100,
    "y": 49.999999999999964,
    "y1": -2.1316282072803006e-14,
    "y2": 22.3857625084603,
  },
  {
    "type": "C",
    "x": 83.91203703703707,
    "x1": 100.00000000000003,
    "x2": 92.79717363732414,
    "y": 100,
    "y1": 77.61423749153963,
    "y2": 99.99999999999997,
  },
  {
    "type": "L",
    "x": 16.087962962962962,
    "y": 100,
  },
  {
    "type": "C",
    "x": -3.552713678800501e-15,
    "x1": 7.202826362675898,
    "x2": 3.552713678800501e-15,
    "y": 50.00000000000003,
    "y1": 100.00000000000001,
    "y2": 77.61423749153968,
  },
  {
    "type": "C",
    "x": 16.08796296296294,
    "x1": -7.105427357601002e-15,
    "x2": 7.202826362675873,
    "y": 0,
    "y1": 22.385762508460367,
    "y2": 2.842170943040401e-14,
  },
  {
    "type": "Z",
  },
]
`;
